--- a/copier.yml
+++ b/copier.yml
@@ -5,6 +5,10 @@ _exclude:
   - LICENSE
   - README.md
 
+_tasks:
+  - command: "git init && git add . && git commit -m \"chore: initialize project\""
+    when: "{{ _copier_operation == 'copy' }}"
+
 project_name:
   type: str
   help: "What is the project name?"
